# RosLiCamFuse

./: CMakeLists.txt  README.md  package.xml
calib/: distortion.txt  extrinsic.txt  intrinsic.txt
include/: common.h  lidar_cam_fuse.h  lidar_cam_proj.h  ros_bag_load.h
launch/: lidar_cam_fuse.launch
src/: common.cpp  lidar_cam_fuse.cpp  lidar_cam_proj.cpp  main.cpp  ros_bag_load.cpp
