<?xml version="1.0"?>
<package format="2">
  <name>lidar_cam_fuse</name>
  <version>0.0.0</version>
  <description>The lidar_cam_fuse package</description>

  <maintainer email="tranminhduc4796@gmail.com">ductm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>


  <build_export_depend>cv_bridge</build_export_depend>

  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
</package>
